Trabajando en el administrador de Identity Core

--- a/BethanysPieShop/appsettings.json
+++ b/BethanysPieShop/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BethanysPieShop4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=BethanysPieShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
