--- a/BethanysPieShop/BethanysPieShop.csproj
+++ b/BethanysPieShop/BethanysPieShop.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20181111004732_ApplicationUserUpdate.cs" />
+    <Compile Remove="Migrations\20181111004732_ApplicationUserUpdate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
