Trabajando con roles II

--- a/BethanysPieShop/BethanysPieShop.csproj
+++ b/BethanysPieShop/BethanysPieShop.csproj
@@ -15,4 +15,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="http://json.schemastore.org/bowerrc" /></VisualStudio></ProjectExtensions>
+
 </Project>
